Use List.getFirst() in operation dispatch
We are always looking at the first entry, use List.getFirst() instead of
List.get(0).

Change-Id: I7b2057dc09807fbba8459c00be00237a1588cbea
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>